test: generate HLS AES key at runtime